# marker_p

./: .gitignore  diff.sh  package.json  pyproject.toml
diff/handwriting/2-paragraph/: 2-paragraph.md.diff
diff/handwriting/2-paragraph-crumpled/: 2-paragraph-crumpled.md.diff
diff/handwriting/e_handwriting_dot/: e_handwriting_dot.md.diff
diff/handwriting/e_handwriting_plain/: e_handwriting_plain.md.diff
diff/handwriting/meshed/: meshed.md.diff
diff/handwriting/normal/: normal.md.diff
diff/random/class06/: class06.md.diff
diff/random/research_paper/: research_paper.md.diff
lib/: llm_utils.py  marker_utils.py  textlint_util.sh
llm_out/handwriting/2-paragraph/: 2-paragraph.md
llm_out/handwriting/2-paragraph-crumpled/: 2-paragraph-crumpled.md
llm_out/handwriting/e_handwriting_dot/: e_handwriting_dot.md
llm_out/handwriting/e_handwriting_plain/: e_handwriting_plain.md
llm_out/handwriting/meshed/: meshed.md
llm_out/handwriting/normal/: normal.md
llm_out/random/class06/: class06.md
llm_out/random/research_paper/: research_paper.md
marker_out/handwriting/2-paragraph/: 2-paragraph.md
marker_out/handwriting/2-paragraph-crumpled/: 2-paragraph-crumpled.md
marker_out/handwriting/e_handwriting_dot/: e_handwriting_dot.md  e_handwriting_dot_meta.json
marker_out/handwriting/e_handwriting_plain/: e_handwriting_plain_meta.json
marker_out/handwriting/meshed/: meshed.md  meshed_meta.json
marker_out/handwriting/normal/: normal.md
marker_out/random/class06/: class06.md  class06_meta.json
src/: llm_cleansing.py  marker_test.py  textlint_cleansing.sh
(+4 files in other folders)
